Fix undesired inline-block whitespace

--- a/css/emoji-picker.css
+++ b/css/emoji-picker.css
@@ -118,6 +118,7 @@
 .emoji-picker-emoji {
   position: relative;
   display: inline-block;
+  font-size: 0;
 }
 
 .emoji-picker-emoji span {
@@ -197,6 +198,7 @@
 }
 
 .emoji-picker-skin-swatches {
+  font-size: 0;
   padding: 2px 0;
   border: 1px solid #d9d9d9;
   border-radius: 12px;
